fix golangci-lint timeout flag

--- a/.github/workflows/go_test.yaml
+++ b/.github/workflows/go_test.yaml
@@ -28,7 +28,7 @@ jobs:
       uses: golangci/golangci-lint-action@v2
       with:
         version: v1.32
-        args: --timeout 300
+        args: --timeout=5m
 
     - name: Test
       run: go test -v -coverprofile=.coverprofile .
