--- a/config/samples/loki_v1beta1_lokistack.yaml
+++ b/config/samples/loki_v1beta1_lokistack.yaml
@@ -3,5 +3,4 @@ kind: LokiStack
 metadata:
   name: lokistack-sample
 spec:
-  # Add fields here
-  name: mystack
+  storage_class_name: "standard" # this is the default for KiND
