--- a/bundle/manifests/loki-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/loki-operator.clusterserviceversion.yaml
@@ -11,7 +11,7 @@ metadata:
             "name": "lokistack-sample"
           },
           "spec": {
-            "name": "mystack"
+            "storage_class_name": "standard"
           }
         }
       ]
@@ -58,6 +58,7 @@ spec:
           - apps
           resources:
           - deployments
+          - statefulsets
           verbs:
           - create
           - delete
