--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ cmd/loki/loki-debug
 cmd/promtail/promtail-debug
 clients/cmd/docker-driver/docker-driver
 cmd/loki-canary/loki-canary
-cmd/fluent-bit/out_loki.so
-cmd/fluent-bit/out_loki.h
+clients/cmd/fluent-bit/out_grafana_loki.so
+clients/cmd/fluent-bit/out_grafana_loki.h
 cmd/migrate/migrate
 /loki
 /promtail
