fix windows promtail tests

--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -845,6 +845,6 @@ steps:
 - name: test
   image: golang:windowsservercore-1809
   commands:
-  - go test .\pkg\promtail\targets\windows\... -v
+  - go test .\clients\pkg\promtail\targets\windows\... -v
 
 ...
