--- a/Dockerfile.promtail.ocp
+++ b/Dockerfile.promtail.ocp
@@ -1,16 +1,16 @@
-FROM registry.svc.ci.openshift.org/ocp/builder:rhel-8-golang-1.15-openshift-4.6 AS builder
+FROM registry.ci.openshift.org/ocp/builder:rhel-8-golang-1.16-openshift-4.8 AS builder
 ARG GOARCH="amd64"
 WORKDIR /go/src/github.com/grafana/loki
 COPY . .
 RUN touch loki-build-image/.uptodate && mkdir /build
 RUN make BUILD_IN_CONTAINER=false cmd/promtail/promtail
 
-FROM  registry.svc.ci.openshift.org/ocp/4.6:base
+FROM  registry.ci.openshift.org/ocp/4.8:base
 LABEL io.k8s.display-name="OpenShift Loki Promtail" \
       io.k8s.description="An agent responsible for gathering logs and sending them to Loki." \
       io.openshift.tags="grafana,prometheus,monitoring" \
       maintainer="OpenShift Development <dev@lists.openshift.redhat.com>" \
-      version="v0.2.0"
+      version="v2.2.1"
 
 COPY --from=builder /go/src/github.com/grafana/loki/cmd/promtail/promtail /usr/bin/promtail
 COPY --from=builder /go/src/github.com/grafana/loki/cmd/promtail/promtail-local-config.yaml \
