--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,4 +13,4 @@
 
 # Documentation owner: Grafana Docs Squad
 # Grafana Docs Squad does not own the content, but assists with editing and updates.
-/docs/ @grafana/docs-squad
+/docs/ @grafana/docs-squad @KMiller-Grafana
