Log 1403: OCP Certificate Signing (#59)
* Adding service annotations to all loki services

* Adding secret creation script; Adding OCP flag

* Applying fixes based on review commits

* Adding run flags for deploy

* Moving service manager creation methods to new file

* Adding in go run command argumentes

* First attempt at adding the secret volume mount

* Fixing deploy and adding bundle configurations for openshift

* Initial clean up and review fixes

* Code style changes

* Moving configurations; build can return configuration error

* Removing global variables

* Code clean up

* Adding service monitor build test case

* Review changes

* Code updates

* Code change

* Code change

--- a/bundle/manifests/loki-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/loki-operator.clusterserviceversion.yaml
@@ -68,6 +68,9 @@ spec:
       - kind: Service
         name: ""
         version: v1
+      - kind: ServiceMonitor
+        name: ""
+        version: v1
       - kind: StatefulSet
         name: ""
         version: v1
@@ -372,6 +375,16 @@ spec:
           - patch
           - update
         - apiGroups:
+          - monitoring.coreos.com
+          resources:
+          - servicemonitors
+          verbs:
+          - create
+          - get
+          - list
+          - update
+          - watch
+        - apiGroups:
           - rbac.authorization.k8s.io
           resources:
           - clusterrolebindings
@@ -421,7 +434,11 @@ spec:
                 name: loki-operator-controller-manager
             spec:
               containers:
-              - command:
+              - args:
+                - --with-cert-signing-service
+                - --with-service-monitors
+                - --with-tls-service-monitors
+                command:
                 - /manager
                 env:
                 - name: RELATED_IMAGE_LOKI
