Lint script files.
This patch adds a Drone CI step that runs shellcheck on all Bash script
files.

--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -41,6 +41,11 @@ steps:
   - test
   - lint
 
+- name: shellcheck
+  image: koalaman/shellcheck-alpine:stable
+  commands:
+  - apk add make && make lint-scripts
+
 ---
 kind: pipeline
 name: docker-amd64
