Lint script files. (#3944)
* Lint script files.

This patch adds a Drone CI step that runs shellcheck on all Bash script
files.

* Install Bash in shellcheck container.

* Fix a few shelcheck errors.

* Fix build.sh

* Fix remaining shellcheck errors.

--- a/.drone/drone.yml
+++ b/.drone/drone.yml
@@ -41,6 +41,11 @@ steps:
   - test
   - lint
 
+- name: shellcheck
+  image: koalaman/shellcheck-alpine:stable
+  commands:
+  - apk add make bash && make lint-scripts
+
 ---
 kind: pipeline
 name: docker-amd64
