--- a/tools/dev/loki-boltdb-storage-s3/docker-compose.yml
+++ b/tools/dev/loki-boltdb-storage-s3/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       driver: loki-compose
       options:
         loki-url: "http://localhost:8001/loki/api/v1/push"
+        loki-retries: "0"
     image: consul
     command: [ "agent", "-dev" ,"-client=0.0.0.0", "-log-level=info" ]
     ports:
@@ -116,11 +117,12 @@ services:
       context:    .
       dockerfile: dev.dockerfile
     image: loki
-    command: ["sh", "-c", "sleep 3 && exec ./dlv exec ./loki --listen=:18004 --headless=true --api-version=2 --accept-multiclient --continue -- -config.file=./config/loki.yaml -target=querier -server.http-listen-port=8004 -server.grpc-listen-port=9004 -querier.scheduler-address=query-scheduler:9009"]
+    command: ["sh", "-c", "sleep 3 && exec ./dlv exec ./loki --listen=:18004 --headless=true --api-version=2 --accept-multiclient --continue -- -config.file=./config/loki.yaml -target=querier -server.http-listen-port=8004 -server.grpc-listen-port=9004 -querier.scheduler-address=query-scheduler:9009 -querier.frontend-address="]
     depends_on:
       - consul
       - minio
       - query-frontend
+      - query-scheduler
     environment:
       - JAEGER_AGENT_HOST=jaeger
       - JAEGER_AGENT_PORT=6831
@@ -192,6 +194,7 @@ services:
     depends_on:
       - consul
       - minio
+      - query-scheduler
     environment:
       - JAEGER_AGENT_HOST=jaeger
       - JAEGER_AGENT_PORT=6831
@@ -208,7 +211,20 @@ services:
     logging:
       <<: *logging
     image: quay.io/cortexproject/cortex:master-a4bf103
-    command: ["-target=query-scheduler -server.http-listen-port=8009 -server.grpc-listen-port=9009"]
+    command: ["-config.file=/cortex/config/cortex.yaml", "-log.level=debug", "-target=query-scheduler", "-server.http-listen-port=8009", "-server.grpc-listen-port=9009"]
+    depends_on:
+      - consul
+      - minio
+    environment:
+      - JAEGER_AGENT_HOST=jaeger
+      - JAEGER_AGENT_PORT=6831
+      - JAEGER_TAGS=app=query-scheduler
+      - JAEGER_SAMPLER_TYPE=const
+      - JAEGER_SAMPLER_PARAM=1
+    ports:
+      - 8009:8009
+    volumes:
+      - ./config:/cortex/config
 
   grafana:
     logging:
