--- a/tools/dev/loki-boltdb-storage-s3/config/loki.yaml
+++ b/tools/dev/loki-boltdb-storage-s3/config/loki.yaml
@@ -83,7 +83,7 @@ limits_config:
     max_streams_per_user: 0
     reject_old_samples: true
     reject_old_samples_max_age: 168h
-    split_queries_by_interval: 15m
+    # split_queries_by_interval: 15m
 querier:
     engine:
         timeout: 5m
@@ -91,14 +91,14 @@ querier:
     query_timeout: 5m
 query_range:
     align_queries_with_step: true
-    cache_results: true
+    # cache_results: true
     max_retries: 5
-    parallelise_shardable_queries: true
-    results_cache:
-        cache:
-            memcached_client:
-                addresses: memcached:11211
-    split_queries_by_interval: 30m
+    # parallelise_shardable_queries: true
+    # results_cache:
+    #     cache:
+    #         memcached_client:
+    #             addresses: memcached:11211
+    # split_queries_by_interval: 30m
 schema_config:
     configs:
       - from: "2020-07-30"
