Improves development docker-compose.
- Remove retries to avoid deadlock when shutting down.
- Add a querier datasource to compare with frontend within grafana.

Signed-off-by: Cyril Tovena <cyril.tovena@gmail.com>

--- a/tools/dev/loki-boltdb-storage-s3/config/datasource.yaml
+++ b/tools/dev/loki-boltdb-storage-s3/config/datasource.yaml
@@ -1,6 +1,10 @@
 apiVersion: 1
 datasources:
-  - name: Loki
+  - name: loki-frontend
     type: loki
     access: proxy
     url: http://query-frontend:8007
+  - name: loki-querier
+    type: loki
+    access: proxy
+    url: http://querier:8004
