fix: Separate k8s-libsonnet dependency
Signed-off-by: Jack Baldry <jack.baldry@grafana.com>

--- a/production/ksonnet/enterprise-logs/Makefile
+++ b/production/ksonnet/enterprise-logs/Makefile
@@ -1,3 +1,5 @@
+include variables.mk
+
 .ONESHELL:
 .DELETE_ON_ERROR:
 export SHELL     := bash
@@ -11,25 +13,29 @@ help: ## Display this help.
 help:
 	@awk 'BEGIN {FS = ": ##"; printf "Usage:\n  make <target>\n\nTargets:\n"} /^[a-zA-Z0-9_\.\-\/% ]+: ##/ { printf "  %-45s %s\n", $$1, $$2 }' $(MAKEFILE_LIST)
 
-jsonnetfile.lock.json: ## Update the locked dependency versions.
+jsonnetfile.lock.json: ## Update the locked dependency versions for the library.
 jsonnetfile.lock.json: jsonnetfile.json
 	jb update
 
-vendor: ## Vendor dependencies.
-vendor: jsonnetfile.json
-	jb install
+test/.eval: ## Evaluate the library Jsonnet.
+test/.eval: test/eval.jsonnet main.libsonnet test/lib/k.libsonnet vendor test/vendor
+	cd $(@D); tmp=$$(mktemp); if tk eval $(<F) | tee $${tmp}; then mv $${tmp} $(@F); fi
 
-lib:
+test/lib:
 	mkdir -p $@
 
-lib/k.libsonnet: ## Install implicit k.libsonnet dependency.
-lib/k.libsonnet: jsonnetfile.json | lib
-	lib="github.com/jsonnet-libs/k8s-libsonnet"
-	version=$$(jq --arg repo https://$${lib}.git -r -M \
-								'.dependencies[] | select(.source.git.remote == $$repo) | .source.git.subdir' \
-								jsonnetfile.json)
-	printf "(import '%s/%s/main.libsonnet')" $${lib} $${version} > $@
+test/lib/k.libsonnet: ## Install implicit k.libsonnet dependency used in testing.
+test/lib/k.libsonnet: test/lib
+	printf "(import 'github.com/jsonnet-libs/k8s-libsonnet/%s/main.libsonnet')" $(K8S_VERSION) > $@
 
-.eval: ## Evaluate the library Jsonnet.
-.eval: eval.jsonnet main.libsonnet lib/k.libsonnet vendor
-	tmp=$$(mktemp); if tk eval $< | tee $${tmp}; then mv $${tmp} $@; fi
+test/jsonnetfile.json: ## Update the jsonnetfile used in testing.
+test/jsonnetfile.json: test/jsonnetfile.jsonnet variables.mk jsonnetfile.json
+	jsonnet --tla-str k8sVersion=$(K8S_VERSION) $< > $@
+
+test/jsonnetfile.lock.json: ## Update the locked dependency versions used in testing.
+test/jsonnetfile.lock.json: test/jsonnetfile.json
+	cd $(@D); jb update
+
+test/vendor: ## Vendor dependencies used in testing.
+test/vendor: test/jsonnetfile.lock.json
+	cd $(@D); jb install
