fix: Remove unused prerequisite of test evaluation
Signed-off-by: Jack Baldry <jack.baldry@grafana.com>

--- a/production/ksonnet/enterprise-logs/Makefile
+++ b/production/ksonnet/enterprise-logs/Makefile
@@ -18,7 +18,7 @@ jsonnetfile.lock.json: jsonnetfile.json
 	jb update
 
 test/.eval: ## Evaluate the library Jsonnet.
-test/.eval: test/eval.jsonnet main.libsonnet test/lib/k.libsonnet vendor test/vendor
+test/.eval: test/eval.jsonnet main.libsonnet test/lib/k.libsonnet test/vendor
 	cd $(@D); tmp=$$(mktemp); if tk eval $(<F) | tee $${tmp}; then mv $${tmp} $(@F); fi
 
 test/lib:
