--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -24,7 +24,7 @@ markComment: >
 
   Stalebots are also emotionless and cruel and can close issues which are still very relevant.
 
-  If this issue is important to you, please comment to keep it open.
+  If this issue is important to you, please add a comment to reopen it.
 
   **More importantly, please add a thumbs-up to the original issue entry.**
 
