Fixing CI deprecations
Replacing deprecated golint with revive (https://github.com/golangci/golangci-lint/pull/1965)

Removing interfacer (https://github.com/golangci/golangci-lint/pull/1755)

Signed-off-by: Danny Kopping <danny.kopping@grafana.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -55,7 +55,7 @@ linters:
     - goconst
     - gofmt
     - goimports
-    - golint
+    - revive
     - gosimple
     - ineffassign
     - megacheck
@@ -66,7 +66,6 @@ linters:
     - varcheck
     - govet
     - unused # new from here.
-    - interfacer
     - typecheck
 
 issues:
