Further suggestions from Marco in https://github.com/grafana/loki/issues/1002
Signed-off-by: Danny Kopping <danny.kopping@grafana.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -58,14 +58,14 @@ linters:
     - revive
     - gosimple
     - ineffassign
-    - megacheck
+    - staticcheck
     - misspell
     - structcheck
     - unconvert
     - unparam
     - varcheck
     - govet
-    - unused # new from here.
+    - unused
     - typecheck
 
 issues:
